; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_main.c_CL_FlushMemory.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_main.c_CL_FlushMemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@com_sv_running = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CL_FlushMemory() #0 {
  %1 = call i32 (...) @CL_ShutdownAll()
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @com_sv_running, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %0
  %7 = call i32 (...) @Hunk_Clear()
  %8 = call i32 (...) @CM_ClearMap()
  br label %11

9:                                                ; preds = %0
  %10 = call i32 (...) @Hunk_ClearToMark()
  br label %11

11:                                               ; preds = %9, %6
  %12 = call i32 (...) @CL_StartHunkUsers()
  ret void
}

declare dso_local i32 @CL_ShutdownAll(...) #1

declare dso_local i32 @Hunk_Clear(...) #1

declare dso_local i32 @CM_ClearMap(...) #1

declare dso_local i32 @Hunk_ClearToMark(...) #1

declare dso_local i32 @CL_StartHunkUsers(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
